main.tf
resource "aws_spot_instance_request" "rabbitmqr" {
  ami                    = data.aws_ami.ownami.image_id
  instance_type          = var.instance_type
  subnet_id              = var.subnet_ids[0]
  wait_for_fulfillment   = true
  vpc_security_group_ids = [aws_security_group.sgr.id]
  iam_instance_profile   = aws_iam_instance_profile.ssm_profile.name


  tags = merge(
    var.tags,
    { Name = "${var.env}-rabbitmq" }
  )

}


resource "aws_ec2_tag" "name-tag" {
  resource_id = aws_spot_instance_request.rabbitmqr.spot_instance_id
  key = "Name"
  value = "rabbitmq-${var.env}"
  
}
resource "aws_security_group" "sgr" {
  name        = "rabbitmq-${var.env}-sg"
  description = "rabbitmq-${var.env}-sg"
  vpc_id      = var.vpc_id

  ingress {
    description = "rabbitmq port"
    from_port   = 5672
    to_port     = 5672
    protocol    = "tcp"
    cidr_blocks = var.allow_db_to_subnets
  }

  ingress {
    description = "for bastionn ssh access for rabbitmq db ec2"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = var.bastion_cidr
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = merge(
    var.tags,
    { Name = "rabbitmq-${var.env}" }
  )
}

resource "aws_route53_record" "myr53" {
  zone_id = data.aws_route53_zone.domain.zone_id
  name    = "rabbitmq-${var.env}.${var.dns_domain}"
  type    = "A"
  ttl     = 30
  records = [aws_spot_instance_request.rabbitmqr.private_ip]
}
